Fix some small layout problems with the posts chart.

--- a/assets/main.css
+++ b/assets/main.css
@@ -357,7 +357,7 @@ section.homepage.code a {
   color: rgba(85,170,102,0.6);
 }
 section.homepage.posts {
-  height: 140px;
+  height: 150px;
 }
 section.homepage.posts a {
   color: #56a;
