--- a/styles/homepage.styl
+++ b/styles/homepage.styl
@@ -76,7 +76,7 @@ section.homepage
             color: rgba($codeColour, 0.6)
 
     &.posts
-        height: 140px
+        height: 150px
 
         a
             color: $postsColour
